--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+# Composer
 vendor/
+# Used in customizer setup
 !vendor/wptrt
-!vendor/composer
+
+# npm
 node_modules/
+
 *.log
 
 # OS generated files
