--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         }
     ],
     "require": {
-        "wptrt/control-color-alpha": "^1.1"
+        "wptrt/control-color-alpha": "^1.1",
+        "tgmpa/tgm-plugin-activation": "^2.6",
+        "vena/acf-json": "^1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
