--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Base wordpress theme for CMLS sites",
   "main": "index.js",
   "scripts": {
+    "start": "wp-scripts start",
     "build": "wp-scripts build",
     "check-engines": "wp-scripts check-engines",
     "check-licenses": "wp-scripts check-licenses",
@@ -14,7 +15,7 @@
     "lint:md:js": "wp-scripts lint-md-js",
     "lint:pkg-json": "wp-scripts lint-pkg-json",
     "packages-update": "wp-scripts packages-update",
-    "start": "wp-scripts start"
+    "full-upgrade": "npm update; npm run packages-update; npm upgrade"
   },
   "repository": {
     "type": "git",
@@ -31,7 +32,7 @@
   },
   "homepage": "https://github.com/cumulus-digital/wp-cmls-base#readme",
   "devDependencies": {
-    "@wordpress/scripts": "^22.4.0",
+    "@wordpress/scripts": "^22.5.0",
     "bourbon": "^7.0.0",
     "classlist-polyfill": "^1.2.0",
     "hamburgers": "^1.1.3",
