slightly more efficient scroll tracking

--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "colord": "^2.9.2",
     "hamburgers": "^1.1.3",
     "jquery": "^3.5.1",
-    "lodash": "^4.17.20",
-    "prettier": "npm:wp-prettier@latest"
+    "lodash": "^4.17.20"
   },
   "browserslist": [
     "last 3 versions or > 1%"
