--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "homepage": "https://github.com/cumulus-digital/wp-cmls-base#readme",
   "devDependencies": {
-    "@wordpress/scripts": "^30.4.0",
+    "@wordpress/scripts": "^30.12.0",
     "bourbon": "^7.3.0",
     "classlist-polyfill": "^1.2.0",
     "colord": "^2.9.3",
@@ -39,5 +39,8 @@
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "prettier": "npm:wp-prettier@^3.0.3"
+  },
+  "dependencies": {
+    "sass": "^1.83.4"
   }
 }
